# windivs

./: .gitattributes  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  COPYING  COPYING.ARM  Doxyfile  INSTALL  README.md  configure.cmd  configure.sh  toolchain-msvc.cmake
.github/: FUNDING.yml
.github/workflows/: build.yml
base/applications/: CMakeLists.txt
boot/: boot_images.cmake
boot/armllb/: boot.s  crtsupp.c  envir.c  fw.c  main.c
boot/bootdata/: CMakeLists.txt  bootcd.ini  floppy_pc98.ini  hivebcd.inf  hivecls.inf  hivedef.inf  hivesft.inf  hivesys.inf  hybridcd.ini  livecd.ini  readme.txt  txtsetup.sif
dll/apisets/: amd64_reactos.apisets_6595b64144ccf1df_1.0.0.0_none_deadbeef.manifest  amd64_reactos.apisets_6595b64144ccf1df_1.0.0.0_none_deadbeef.manifest.in  update.py
dll/win32/: CMakeLists.txt
dll/win32/imageres/: CMakeLists.txt  RCa16740  imageres.cpp  imageres.h  imageres.rc
drivers/wmi/: wmilib.c  wmilib.spec
media/: forwardcompatible.manifest
media/doc/: 3rd Party Files.txt  Chinese translation notes.txt  HACKING  INDEX  INTERNALS  Romanian translation notes.txt  WINESYNC.txt  win32k_refs.txt
media/inf/: NET_NIC.inf  audio.inf  battery.inf  bda.inf  bth.inf  c_image.inf  defltsv.inf  defltwk.inf  display.inf  fdc.inf  flpydisk.inf  font.inf  hal.inf  hdc.inf  input.inf  intl.inf  keyboard.inf  ks.inf  kscaptur.inf  layout.inf  legcydrv.inf  machine.inf  monitor.inf  msmouse.inf  nettcpip.inf  ports.inf  scsi.inf  shortcuts.inf  syssetup.inf.tpl  unknown.inf  usb.inf  usbport.inf  volume.inf  wdmaudio.inf  wmiacpi.inf
media/sdb/: sysmain.xml
media/sounds/: CMakeLists.txt
media/themes/: CMakeLists.txt
modules/: CMakeLists.txt
modules/rosapps/: readme.txt
modules/rostests/: readme.txt
modules/wallpapers/: CMakeLists.txt  ReadMe.txt  wallpapers.txt
modules/wallpapers/Angelus/: CMakeLists.txt  ReadMe.txt
modules/wallpapers/Angelus/ReactOS/: CMakeLists.txt
modules/wallpapers/Silhouette/: README.md
ntoskrnl/: ntoskrnl.rc  ntoskrnl.spec
ntoskrnl/cache/: cachesub.c  copysup.c  fssup.c  lazyrite.c  logsup.c  mdlsup.c  pinsup.c
ntoskrnl/cc/: cacheman.c  copy.c  fs.c  lazywrite.c  mdl.c  pin.c  view.c
ntoskrnl/config/: cmalloc.c  cmapi.c  cmboot.c  cmcheck.c  cmconfig.c  cmcontrl.c  cmdata.c  cmdelay.c  cmhook.c  cmhvlist.c  cminit.c  cmkcbncb.c  cmlazy.c  cmmapvw.c  cmnotify.c  cmparse.c  cmquota.c  cmse.c  cmsecach.c  cmsysini.c  cmvalche.c  cmwraprs.c  ntapi.c
ntoskrnl/dbgk/: dbgkobj.c  dbgkutil.c
ntoskrnl/ex/: atom.c  callback.c  dbgctrl.c  efi.c  event.c  evtpair.c  exintrin.c  fmutex.c  handle.c  harderr.c  hdlsterm.c  init.c  interlocked.c  keyedevt.c  locale.c  lookas.c  mutant.c  profile.c  pushlock.c  resource.c  rundown.c  sem.c  shutdown.c  sysinfo.c  time.c  timer.c  uuid.c  win32k.c  work.c  xipdisp.c  zone.c
ntoskrnl/fsrtl/: dbcsname.c  fastio.c  faulttol.c  filelock.c  filter.c  filtrctx.c  mcb.c  (+10 more)
win32ss/: pch.h  w32ksvc32.h  win32kp.h
(+7421 files in other folders)
