add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/1920px_Polarlicht.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/clouds.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/grass.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/lake.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_CirclesBlue_1.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_CirclesBlue_2.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_CirclesGold_1.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_CirclesGold_2.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_Hexagons.jpg DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_Mizu.png DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_Mizu_4x3.png DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_Mizu_16x9_A.png DESTINATION reactos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/Windivs_Mizu_16x9_B.png DESTINATION reactos/Web/Wallpaper FOR all)
add_subdirectory(Angelus)
add_subdirectory(Silhouette)
